Update docker files to solve issue when building from zero

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,30 @@
 FROM php:8.3-apache
 
-# Instalar extensiones necesarias
+# Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql
 
-# Habilitar mod_rewrite y configurar Apache
-RUN a2enmod rewrite
-
-RUN echo '<Directory /var/www/html/>\n\
+# Enable Apache mod_rewrite
+RUN a2enmod rewrite \
+    && echo '<Directory /var/www/html/>\n\
     Options Indexes FollowSymLinks\n\
     AllowOverride All\n\
     Require all granted\n\
-</Directory>' > /etc/apache2/conf-available/api.conf \
+    </Directory>' > /etc/apache2/conf-available/api.conf \
     && a2enconf api
 
-# Copiar Composer
+# Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
+
+# Copy only composer files first (for better caching)
+COPY composer.json composer.lock ./
+
+# Install PHP dependencies
+RUN composer install --no-interaction --optimize-autoloader
+
+# Copy the rest of the app
 COPY . .
+
+# Expose port
+EXPOSE 80
