--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,18 @@
-FROM node:22
+FROM node:22-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+# Copy package files first for better caching
+COPY package.json package-lock.json ./
+
+# Install Node dependencies
 RUN npm install
 
+# Copy the rest of the app
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# Expose port
+EXPOSE 8080
+
+# Start the dev server
+CMD ["npm", "run", "serve"]
